@@ -6,18 +6,28 @@
     <x>0</x>
     <y>0</y>
     <width>341</width>
-    <height>169</height>
+    <height>387</height>
    </rect>
   </property>
   <layout class="QGridLayout" >
    <item row="0" column="0" >
+    <widget class="QLabel" name="orbitalLabel" >
+     <property name="text" >
+      <string>Orbital:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" >
+    <widget class="QComboBox" name="orbitalCombo" />
+   </item>
+   <item row="1" column="0" >
     <widget class="QLabel" name="opacityLabel" >
      <property name="text" >
       <string>Opacity:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1" >
+   <item row="1" column="1" >
     <widget class="QSlider" name="opacitySlider" >
      <property name="minimum" >
       <number>0</number>
@@ -51,14 +61,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" >
+   <item row="2" column="0" >
     <widget class="QLabel" name="renderLabel" >
      <property name="text" >
       <string>Render:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1" >
+   <item row="2" column="1" >
     <widget class="QComboBox" name="renderCombo" >
      <item>
       <property name="text" >
@@ -77,14 +87,14 @@
      </item>
     </widget>
    </item>
-   <item row="2" column="0" >
+   <item row="3" column="0" >
     <widget class="QLabel" name="paddingLabel_2" >
      <property name="text" >
       <string>Interpolate:</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1" >
+   <item row="3" column="1" >
     <widget class="QCheckBox" name="interpolate" >
      <property name="text" >
       <string/>
@@ -97,14 +107,14 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" >
+   <item row="4" column="0" >
     <widget class="QLabel" name="paddingLabel" >
      <property name="text" >
       <string>IsoValue:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1" >
+   <item row="4" column="1" >
     <widget class="QDoubleSpinBox" name="isoSpin" >
      <property name="decimals" >
       <number>5</number>
@@ -116,21 +126,21 @@
       <double>5.000000000000000</double>
      </property>
      <property name="singleStep" >
-      <double>0.001000000000000</double>
+      <double>0.010000000000000</double>
      </property>
      <property name="value" >
       <double>0.010000000000000</double>
      </property>
     </widget>
    </item>
-   <item row="4" column="0" >
+   <item row="5" column="0" >
     <widget class="QLabel" name="colorLabel" >
      <property name="text" >
       <string>Color:</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1" >
+   <item row="5" column="1" >
     <layout class="QHBoxLayout" >
      <item>
       <widget class="QLabel" name="colorLabel_2" >
@@ -193,7 +203,7 @@
      </item>
     </layout>
    </item>
-   <item row="5" column="0" colspan="2" >
+   <item row="6" column="0" colspan="2" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
